--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -3,9 +3,10 @@
 <%
 # Android
 # android_home = "/usr/local/opt/android-sdk" # installed from homebrew
-android_phone = "" # device adb id
+android_phone = "42003e47d03992d3" # device adb id
 android_emu = "emulator-5554" # emulator ADB id
 android_app = "../build/app.apk" # .apk file
+#android_app = "/Users/digio/AndroidStudioProjects/gobike-biker-android/app/build/outputs/apk/app-release.apk" # .apk file
 
 # IOS
 device_ip = "http://iphone.local:37265" # Hostname of iphone
