--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -5,8 +5,8 @@
 # android_home = "/usr/local/opt/android-sdk" # installed from homebrew
 android_phone = "42003e47d03992d3" # device adb id
 #android_phone = "FA32TPN04070" # device adb id
-#android_emu = "emulator-5554" # emulator ADB id
-android_emu = "192.168.85.10-5555" # emulator ADB id
+android_emu = "emulator-5740" # emulator ADB id
+#android_emu = "192.168.85.10-5555" # emulator ADB id
 android_app = "../build/app.apk" # .apk file
 
 # IOS
